k8s/captcha-solver.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: captcha-solver
  namespace: portfolio
spec:
  replicas: 1
  selector:
    matchLabels:
      app: captcha-solver
  template:
    metadata:
      labels:
        app: captcha-solver
    spec:
      containers:
        - name: captcha-solver
          image: ktenman/captcha-solver:latest
          ports:
            - containerPort: 8000

---
apiVersion: v1
kind: Service
metadata:
  name: captcha-solver
  namespace: portfolio
spec:
  ports:
    - port: 8000
  selector:
    app: captcha-solver
