k8s/market-tracker.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: market-tracker
  namespace: portfolio
spec:
  replicas: 1
  selector:
    matchLabels:
      app: market-tracker
  template:
    metadata:
      labels:
        app: market-tracker
    spec:
      containers:
        - name: market-tracker
          image: ktenman/market-price-tracker:latest
          ports:
            - containerPort: 5000
---
apiVersion: v1
kind: Service
metadata:
  name: market-tracker
  namespace: portfolio
spec:
  ports:
    - port: 5000
  selector:
    app: market-tracker
